Actions
Bug #13852
closedsmbstat -r dumps core
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
External Bug:
Description
root@romulus:/var/cores# smbstat -r
Segmentation Fault (core dumped)
Updated by Gordon Ross about 2 years ago
- Status changed from New to In Progress
smbstat_srv_process_requests() is using the wrong values to index the arrays of per-request stats.
Updated by Electric Monk almost 2 years ago
- Status changed from In Progress to Closed
- % Done changed from 0 to 100
git commit 5015ecc336998f9971d6310c6faa7e992f95cc4b
commit 5015ecc336998f9971d6310c6faa7e992f95cc4b Author: Gordon Ross <gordon.ross@tintri.com> Date: 2021-06-07T22:03:25.000Z 13852 smbstat -r dumps core Reviewed by: Evan Layton <elayton@tintri.com> Reviewed by: Joyce McIntosh <jmcintosh@tintri.com> Reviewed by: Matt Barden <mbarden@tintri.com> Reviewed by: Andrew Stormont <andyjstormont@gmail.com> Reviewed by: Toomas Soome <tsoome@me.com> Approved by: Richard Lowe <richlowe@richlowe.net>
Actions