13852 smbstat -r dumps core Reviewed by: Evan Layton <elayton@tintri.com> Reviewed by: Joyce McIntosh <jmcintosh@tintri.com> Reviewed by: Matt Barden <mbarden@tintri.com> Reviewed by: Andrew Stormont <andyjstormont@gmail.com> Reviewed by: Toomas Soome <tsoome@me.com> Approved by: Richard Lowe <richlowe@richlowe.net>